--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
         </div>
     </nav>
 
-    <header class="hero-section d-flex align-items-center">
-        <div class="container text-center">
+<header class="hero-section d-flex align-items-center">
+        <video autoplay muted loop playsinline class="hero-video">
+            <source src="header-bg.mp4" type="video/mp4">
+        </video>
+        
+        <div class="hero-overlay"></div>
+
+        <div class="container text-center position-relative content-layer">
             <h1 class="display-1 fw-bold mb-3">A Dynamic Voice in Media</h1>
             <p class="lead mb-4">Media Personality | Cultural Strategist | Performing Artist</p>
             <div class="d-flex justify-content-center gap-3">
