--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </div>
     </nav>
 
-<header class="hero-section d-flex align-items-center">
+<header class="hero-section">
         <video autoplay muted loop playsinline class="hero-video">
             <source src="header-bg.mp4" type="video/mp4">
         </video>
         
         <div class="hero-overlay"></div>
 
-        <div class="container text-center position-relative content-layer">
+        <div class="container text-center content-layer">
             <h1 class="display-1 fw-bold mb-3">A Dynamic Voice in Media</h1>
             <p class="lead mb-4">Media Personality | Cultural Strategist | Performing Artist</p>
             <div class="d-flex justify-content-center gap-3">
@@ -44,7 +44,6 @@
             </div>
         </div>
     </header>
-
     <section id="about" class="py-5">
         <div class="container py-5">
             <div class="row align-items-center">
