--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
     </nav>
 
 <header class="hero-section">
-        <video autoplay muted loop playsinline class="hero-video">
-            <source src="header-bg.mp4" type="video/mp4">
-        </video>
-        
-        <div class="hero-overlay"></div>
+    <video autoplay muted loop playsinline class="hero-video">
+        <source src="header-bg.mp4" type="video/mp4">
+    </video>
+    
+    <div class="hero-overlay"></div>
 
-        <div class="container text-center content-layer">
-            <h1 class="display-1 fw-bold mb-3">A Dynamic Voice in Media</h1>
-            <p class="lead mb-4">Media Personality | Cultural Strategist | Performing Artist</p>
-            <div class="d-flex justify-content-center gap-3">
-                <a href="#contact" class="btn btn-gold">Get in Touch</a>
-                <a href="#experience" class="btn btn-outline-light">View Portfolio</a>
-            </div>
+    <div class="container content-layer">
+        <h1 class="display-1 fw-bold mb-3">A Dynamic Voice in Media</h1>
+        <p class="lead mb-4">Media Personality | Cultural Strategist | Performing Artist</p>
+        <div class="d-flex justify-content-center gap-3">
+            <a href="#contact" class="btn btn-gold">Get in Touch</a>
+            <a href="#experience" class="btn btn-outline-light">View Portfolio</a>
         </div>
-    </header>
+    </div>
+</header>
     <section id="about" class="py-5">
         <div class="container py-5">
             <div class="row align-items-center">
