--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Rawan Alzain" class="img-fluid rounded shadow-lg profile-img">
-                </div>
+<img src="about.jpg" alt="Rawan Alzain" class="img-fluid rounded shadow-lg profile-img">                </div>
                 <div class="col-lg-6">
                     <h2 class="section-title mb-4">About Rawan</h2>
                     <p class="lead">Bridging the worlds of creative expression and social impact.</p>
