--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
         <div class="container">
             <h2 class="mb-4">Let's Collaborate</h2>
             <p class="mb-4">Available for UAE-based cultural initiatives, mentorship programs, and cross-border collaborations.</p>
-            <a href="mailto:rawan.alzain2@gmail.com" class="btn btn-gold btn-lg mb-5">rawan.alzain2@gmail.com</a>
-            
+<a href="mailto:hello@rawanalzain.com" class="btn btn-gold btn-lg mb-5">SEND AN EMAIL</a>            
             <div class="social-links">
                 <a href="#" class="text-white mx-3"><i class="fab fa-instagram fa-2x"></i></a>
                 <a href="#" class="text-white mx-3"><i class="fab fa-linkedin fa-2x"></i></a>
