--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     <footer id="contact" class="py-5 bg-darker text-center">
         <div class="container">
-            <h2 class="mb-4">Let's Collaborate</h2>
+            <h2 class="mb-4">Come Connect</h2>
             <p class="mb-4">Available for UAE-based cultural initiatives, mentorship programs, and cross-border collaborations.</p>
 <a href="mailto:hello@rawanalzain.com" class="btn btn-gold btn-lg mb-5">SEND AN EMAIL</a>            
             <div class="social-links">
