--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">RAWAN ALZAIN</a>
+            <a class="navbar-brand" href="#">rawan alzain</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
