--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <div class="hero-overlay"></div>
 
         <div class="container content-layer">
-            <h1 class="display-1 fw-bold mb-3">rawan alzain</h1>
-            <p class="lead mb-4">Connecting Cultures Through Sound</p>
+            <img src="arabic-logo.png" alt="Rawan Alzain Arabic Logo" class="img-fluid mb-4 header-logo">
             <div class="d-flex justify-content-center gap-3">
                 <a href="#contact" class="btn btn-gold">Get in Touch</a>
                 <a href="#experience" class="btn btn-outline-light">View Portfolio</a>
