--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#speaking">Speaking</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+               <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+        <li class="nav-item"><a class="nav-link" href="#speaking">Speaking</a></li>
+        <li class="nav-item"><a class="nav-link" href="#playlist">Sound Quiz</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+    </ul>
+</div>
             </div>
         </div>
     </nav>
@@ -139,6 +142,22 @@
                 </div>
             </div>
         </div>
+        <section id="playlist" class="py-5 bg-darker">
+        <div class="container py-5 text-center">
+            <h2 class="section-title mb-4">rawan RECOMMENDS</h2>
+            <p class="lead text-muted mb-5">Want to help me create a special playlist for you? Tailored for Spotify, Apple Music, or Anghami.</p>
+
+            <div class="quiz-container">
+                <p>
+                    [EMBED CODE GOES HERE: This will be replaced by your quiz platform's iFrame code.]
+                </p>
+                <a href="[YOUR QUIZ LINK HERE]" target="_blank" class="btn btn-gold btn-lg mt-4">Start the Quiz</a>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact" class="py-5 bg-darker text-center">
+    ... (rest of your footer code)
     </section>
 
     <footer id="contact" class="py-5 bg-darker text-center">
