--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
         <li class="nav-item"><a class="nav-link" href="#speaking">Speaking</a></li>
-        <li class="nav-item"><a class="nav-link" href="#playlist">Sound Quiz</a></li>
+        <li class="nav-item"><a class="nav-link" href="#playlist">Ride with RAWAN</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
     </ul>
 </div>
