--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="about.jpg" alt="Rawan Alzain" class="img-fluid rounded shadow-lg profile-img">
                 </div>
                 <div class="col-lg-6">
-                    <h2 class="section-title mb-4">About Rawan</h2>
+                    <h2 class="section-title mb-4">Who is Rawan?</h2>
                     <p class="lead">Bridging the worlds of creative expression and social impact.</p>
                     <p>Rawan Alzain is a Dubai-based presenter, DJ, and cultural facilitator whose work spans radio, live events, and voice-over. Active since 2016, she designs audience-centered formats that amplify emerging talent and cross-cultural dialogue.</p>
                     <p>Recognized as Sudan's first female DJ and a trained medical doctor, Rawan brings a disciplined, multifaceted perspective to the media landscape. Her contributions have been recognized by the Clinton Global Initiative (NYC) and Art, Design & Audio Connect (Abu Dhabi).</p>
