--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     ... (rest of your footer code)
     </section>
 
-    <footer id="contact" class="py-5 bg-darker text-center">
+  <footer id="contact" class="py-5 bg-darker text-center">
         <div class="container">
             <h2 class="mb-4">COME CONNECT</h2>
             <p class="mb-4">Available for UAE-based cultural initiatives, mentorship programs, and cross-border collaborations.</p>
@@ -176,5 +176,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script type="module" src="auth.js"></script>
 </body>
 </html>
