--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
     <li class="nav-item"><a class="nav-link" href="#playlist">Ride with Rawan</a></li>
     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
     
-    <li class="nav-item ms-3" id="login-container">
+<li class="nav-item ms-3" id="login-container">
         <div class="dropdown">
             <button class="btn btn-gold btn-sm dropdown-toggle" type="button" id="authBtn" data-bs-toggle="dropdown">
-                Login
+                Login / Sign Up
             </button>
             <ul class="dropdown-menu dropdown-menu-end bg-dark border-secondary">
-                <li><a class="dropdown-item text-white" href="#" id="googleLogin">Login with Google</a></li>
-                <li><a class="dropdown-item text-white" href="#" id="microsoftLogin">Login with Microsoft</a></li>
+                <li><h6 class="dropdown-header text-muted">Access your account</h6></li>
+                <li><a class="dropdown-item text-white" href="#" id="googleLogin">Continue with Google</a></li>
+                <li><a class="dropdown-item text-white" href="#" id="microsoftLogin">Continue with Microsoft</a></li>
             </ul>
         </div>
     </li>
