--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     
 <li class="nav-item ms-3" id="login-container">
         <div class="dropdown">
-            <button class="btn btn-gold btn-sm dropdown-toggle" type="button" id="authBtn" data-bs-toggle="dropdown">
-                Login / Sign Up
-            </button>
+           <button class="btn btn-gold btn-sm fw-bold px-3" type="button" id="authBtn" data-bs-toggle="dropdown">
+    Login / Sign Up
+</button>
             <ul class="dropdown-menu dropdown-menu-end bg-dark border-secondary">
                 <li><h6 class="dropdown-header text-muted">Access your account</h6></li>
                 <li><a class="dropdown-item text-white" href="#" id="googleLogin">Continue with Google</a></li>
