--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         <button class="btn btn-outline-light btn-sm" id="logoutBtn">Logout</button>
     </li>
 </ul>
+        </div>
+    </li>
+
+    <li class="nav-item ms-3 d-none" id="user-container">
+        <span class="text-white me-2" id="user-name"></span>
+        <button class="btn btn-outline-light btn-sm" id="logoutBtn">Logout</button>
+    </li>
+</ul>
 <li class="nav-item ms-3" id="login-container">
         <div class="dropdown">
            <button class="btn btn-gold btn-sm fw-bold px-3" type="button" id="authBtn" data-bs-toggle="dropdown">
